--- a/client_new/css/game.css
+++ b/client_new/css/game.css
@@ -1,8 +1,10 @@
 @import url("reset.css");
-@import url("header.css");
-@import url("../lib/simplegrid/simplegrid.css");
-@import url("chat.css");
 @import url("../lib/font-awesome/css/font-awesome.css");
+@import url("../lib/simplegrid/simplegrid.css");
+@import url("fonts.css");
+@import url("general.css");
+@import url("topBar.css");
+@import url("chat.css");
 @import url("tabs.css");
 @import url("gamesLog.css");
 @import url("controlsSelector.css");
@@ -11,6 +13,9 @@
 @import url("betBar.css");
 @import url("chart.css");
 @import url("chartControls.css");
+@import url("players.css");
+@import url("animations.css");
+/*@import url("toTheMoonTheme.css");*/
 
 /**
 Quick Guidelines:
@@ -19,367 +24,3 @@ Quick Guidelines:
         - just-container: is the div that contains a react component
     - when the component is a sibling on a bigger components the react component just returns a container
 **/
-
-@font-face {
-    font-family: tale;
-    src: url(fonts/tale.otf);
-}
-
-@font-face {
-    font-family: rbn;
-    src: url(fonts/RBN.otf);
-}
-
-html, body {
-    font-family: Helvetica, Arial, sans-serif;
-    -webkit-font-smoothing: antialiased;
-    font-size: 20px;
-    font-weight: 300;
-    line-height: 20px;
-    background-color: white;
-    color: black;
-    height: 100%;
-    width: 100%;
-    overflow: hidden;
-}
-
-a {
-    color: #008cba;
-    text-decoration: none;
-    line-height: inherit;
-    cursor: pointer;
-}
-
-b {
-    font-weight: bold;
-}
-
-i {
-    font-style: italic;
-}
-
-.strong {
-    font-weight: 600;
-}
-
-.grid-pad {
-  padding-left:0;
-  padding-right: 0;
-}
-
-@media handheld, only screen and (max-width: 767px) {
-    [class*='col-'] {
-            padding-right: 0;
-            margin-bottom: 0;
-        }
-
-    .hide-for-small-only {
-             display: none !important;
-         }
-}
-
-.wrap {
-    width: 100%;
-    height: 100%;
-}
-
-.page-content {
-    position: absolute;
-    top: 45px;
-    bottom: 0;
-    right: 0;
-    left: 0;
-}
-@media handheld, only screen and (max-width: 767px) {
-    .page-content {
-        top: 0;
-    }
-}
-
-/* Overwrite the native focus outline */
-input:focus {
-    border-color: #66afe9;
-    outline: 0;
-    -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-    box-shadow: inset 0 1px 1px rgba(0,0,0,.075),0 0 8px rgba(102,175,233,.6);
-}
-
-
-@media handheld, only screen and (max-width: 767px) {
-    #handheld-detection {
-        display: none;
-    }
-}
-
-
-/* ==========================================================================
-   Header Overwrite
-   ========================================================================== */
-
-@media handheld, only screen and (max-width: 767px) {
-    .nav-top-bar {
-        border-bottom: none;
-        z-index: 999999;
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-    }
-
-    .nav-top-bar .username a {
-        font-weight: bold;
-    }
-}
-
-
-/* ==========================================================================
-   Game container
-   ========================================================================== */
-
-#game-container {
-    width: 100%;
-    height: 100%;
-}
-
-/* Message bar */
-
-#game-message-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    /* line-height: 1.2rem; */
-    bottom: calc(100% - 1.2rem);
-    background-color: green;
-}
-
-#game-message-container.hide {
-    display: none;
-}
-
-#game-message-container>span {
-    overflow-y: hidden;
-
-}
-
-#game-message-container span>span, #game-message-container span>a {
-    color: white;
-    font-size: 0.8rem;
-    line-height: 1.2rem;
-}
-
-#game-message-container div{
-
-}
-
-/* Playable container (The game) */
-#game-playable-container {
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0;
-}
-
-#game-playable-container.show-message {
-    top: 1.2rem;
-}
-
-#game-message-container .close-message{
-    position: absolute;
-    top: 0;
-    right: 0;
-    cursor: pointer;
-}
-
-#game-message-container .close-message i{
-    color: white;
-
-    font-size: 0.8rem;
-    line-height: 1.2rem;
-    padding-right: 0.2rem;
-}
-
-#game-message-container {
-    text-align: center;
-
-}
-
-#game-inner-container {
-    width: 100%;
-    height: 100%;
-    position: relative;
-}
-
-#game-left-container {
-    display: table;
-    height: 100%;
-    width: 70%;
-    position: relative;
-}
-
-#game-left-container.small-window {
-    width: 100%;
-}
-
-#game-right-container {
-    position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 70%;
-    right: 0;
-    border-left: 1px solid #ddd;
-    border-bottom: 1px solid #ddd;
-    border-right: 1px solid #ddd;
-}
-
-
-/* ==========================================================================
-   Tabs container
-   ========================================================================== */
-
-#tabs-container {
-    border-left: 1px solid #ddd;
-    border-top: 1px solid #ddd;
-    display: table-row;
-}
-
-
-/* ==========================================================================
-   Chart-Controls container
-   ========================================================================== */
-
-#chart-controls-container {
-    border-left: 1px solid #ddd;
-    min-height: 400px;
-    display: table-row;
-    height: 50%;
-}
-
-#chart-controls-row, #tabs-controls-row {
-    display: table-row;
-
-}
-
-#chart-controls-col, #tabs-controls-col {
-    display: table-cell;
-    height: 50%;
-    position: relative;
-}
-
-
-/* ==========================================================================
-   Players List
-   ========================================================================== */
-
-/*.players {*/
-    /*height: 100%;*/
-/*}*/
-
-/*@media handheld, only screen and (max-width: 767px) {*/
-    /*.players {*/
-        /*margin-top: 2em;*/
-    /*}*/
-/*}*/
-
-.users-playing-container, .users-cashed-container {
-    text-align: center;
-    /* border-left: 1px solid rgba(94, 94, 94, 0.2); */
-    overflow-y: scroll;
-    /* height: 100%; */
-    /* display: table-row; */
-    width: 100%;
-    position: absolute;
-    top: 0;
-    right: 0;
-    left: 0;
-    bottom: 0.3rem;
-}
-
-.users-playing, .users-summary { /* table */
-    width: 100%;
-    font-weight: 500;
-    table-layout: fixed;
-}
-
-.users-playing thead, .users-summary thead {
-    border-bottom: 1px solid rgba(94, 94, 94, 0.2);
-
-}
-
-.users-playing thead tr, .users-summary thead tr {
-}
-
-.users-playing tbody, .users-summary tbody {
-    overflow: auto;
-}
-
-.users-playing tbody tr, .users-summary tbody tr {
-    width: 100%;
-}
-
-.users-playing td, .users-playing th, .users-summary td, .users-summary th{
-    height: 1rem;
-    overflow: hidden;
-    text-align: left;
-    font-weight: 400;
-    font-size: 0.8rem;
-}
-
-.bonus-projection {
-    opacity: 0.5;
-}
-
-.users-summary tr:nth-of-type(even), .users-playing tr:nth-of-type(even) {
-    background: #f9f9f9;
-}
-
-
-.users-playing td, .users-playing th, .users-summary td, .users-summary th {
-    padding-left: 6px;
-    max-width: 3rem;
-}
-
-
-/* Playing/Lost/Cashed/Won Colors
-   ========================================================================== */
-
-tr.user-won.me {
-    background-color: rgba(12, 203, 30, .2);
-}
-.user-won td, .user-won td a {
-    color: #408609;
-}
-
-tr.user-lost.me {
-    background-color: rgba(224, 62, 62, .2);
-}
-.user-lost td, .user-lost td a {
-    color: #e03e3e;
-}
-
-tr.user-playing.me {
-    background-color: rgba(255, 129, 0 , .2);
-}
-.user-playing td, .user-playing td a {
-    color: #ff8100;
-}
-
-tr.user-cashed.me {
-    background-color: rgba(12, 203, 30, .2);
-}
-.user-cashed td, .user-cashed td a {
-    color: #408609;
-}
-
-
-/* ==========================================================================
-   Strategy Editor
-   ========================================================================== */
-
-/*.strategy-container {*/
-    /*height: 100%;*/
-    /*font-size: 0.9em;*/
-    /*color: black;*/
-    /*margin-bottom: 1em;*/
-/*}*/
