--- a/client_new/css/chartControls.css
+++ b/client_new/css/chartControls.css
@@ -10,11 +10,12 @@
 
 #chart-container {
     position: absolute;
-    top: 0;
-    bottom: 0;
-    left: 0;
-    right: 40%;
-    margin: 0.5rem;
+    top: 10px;
+    bottom: 10px;
+    left: 10px;
+    right: calc(40% + 10px);
+    /* margin: 0.5rem; */
+    /* overflow: visible; */
 }
 
 #controls-container {
@@ -23,7 +24,8 @@
     bottom: 0;
     left: 61%;
     right: 0;
-    border-left: 1px solid #ddd;
+    border: 1px solid #292d35;
+    margin: 5px;
 }
 
 @media handheld, only screen and (max-width: 767px) {
@@ -41,6 +43,5 @@
         bottom: 0;
         left: 0;
         right: 0;
-        border-left: 1px solid #ddd;
     }
 }
