--- a/client_new/css/controls.css
+++ b/client_new/css/controls.css
@@ -90,6 +90,8 @@
     font-weight: bold;
     top: -1rem;
     border: 0;
+    background-color: transparent !important;
+    border-color: transparent !important;
 }
 
 @media handheld, only screen and (max-width: 767px) {
@@ -155,6 +157,11 @@
     color: white;
 }
 
+#controls-inner-container .bet-input-group.error>span:first-child {
+    color: #a94442;
+    
+}
+
 
 /** Button **/
 
@@ -196,9 +203,11 @@
 @media handheld, only screen and (max-width: 767px) {
     #controls-inner-container .bet-button {
         top: inherit;
-        margin-top: 0.5rem;
-        line-height: 3rem;
-    }
+        /* margin-top: 0.5rem; */
+        line-height: 1.7rem;
+    
+        font-size: 1.2rem;
+}
 }
 
 #controls-inner-container .bet-button span{
@@ -267,6 +276,12 @@
 #controls-inner-container .login-button-container {
     margin: 0.8rem;
     margin-top: 2rem;
+}
+@media handheld, only screen and (max-width: 767px) {
+    #controls-inner-container .login-button-container {
+    margin: 0.4rem 0 0 0.5rem;
+        
+    }
 }
 
 #controls-inner-container .register-container {
