--- a/client_new/css/controlsSelector.css
+++ b/client_new/css/controlsSelector.css
@@ -10,7 +10,7 @@
     width: 100%;
     /* z-index: 5001; */
     display: table;
-    background: rgba(249, 249, 249, 1);
+    /* background: rgba(249, 249, 249, 1); */
 }
 
 @media handheld, only screen and (max-width: 767px) {
@@ -26,20 +26,28 @@
     text-align: center;
     font-size: 0.8rem;
     cursor: pointer;
+    background-color: #292d35;
 }
 
 #controls-selector-container .button-holder:hover a{
     color: rgba(228, 121, 3, 1);
 }
 
+#controls-selector-container .button-holder.tab-active {
+    background-color: #181a1e;
+}
+
 #controls-selector-container .button-holder.tab-active a{
-    color: rgba(228, 121, 3, 1);   font-weight: 800;
-    cursor: pointer;
+    color: rgba(228, 121, 3, 1);
 }
 
 #controls-selector-container .button-holder a{
     line-height: 1.5rem;
-    color: black;
+    color: #b0b3c1;
+    cursor: pointer;
+    font-weight: 800;
+    text-transform: uppercase;
+    font-size: 0.7rem;
 }
 
 /*#controls-selector-container .button-container button{*/
@@ -60,6 +68,7 @@
     right: 0;
     left: 0;
     bottom: 0;
+    background-color: #181a1e;
 }
 
 @media handheld, only screen and (max-width: 767px) {
