--- a/views/table_new.html
+++ b/views/table_new.html
@@ -4,14 +4,11 @@
     <div id="game-container">
         Game Loading...
     </div>
-    <!--Global vars-->
-    <script>
-        // TODO:
-        //  var OTT =  {{=it.ott}};
-    </script>
+
     <!--RequireJs-->
     <script data-main="../scripts/main" src="{{? it.buildConfig }}{{=it.buildConfig.jsHashNew}}.js{{??}}../scripts/lib/require.js{{?}}"></script>
 
+    <!-- Detect the viewport size with css and javascript hack -->
     <div id="handheld-detection"></div>
 #}}
 {{#def.include('./template/main-game')}}
