--- a/client_new/css/game.css
+++ b/client_new/css/game.css
@@ -15,7 +15,31 @@
 @import url("chartControls.css");
 @import url("players.css");
 @import url("animations.css");
-/*@import url("toTheMoonTheme.css");*/
+/*@import url("whiteTheme.css");*/
+
+
+/**
+ *
+ * Header Background/ Widget Border Color: #292d35
+ * Widget Background Color: #181a1e
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ *
+ */
+
 
 /**
 Quick Guidelines:
