--- a/client_new/css/topBar.css
+++ b/client_new/css/topBar.css
@@ -1,6 +1,5 @@
 #top-bar {
     position: absolute;
-
     top: 0;
     right: 0;
     left: 0;
@@ -10,12 +9,10 @@
 
 #top-bar .title {
     float: left;
-
 }
 
 #top-bar .title h1 {
     color: #e58929;
-
     line-height: 2rem;
     font-size: 1.5rem;
     font-weight: bold;
@@ -25,7 +22,46 @@
 
 #top-bar .user-login {
     float: right;
+}
 
+
+/** Toggle design **/
+
+#top-bar .toggle-view {
+    line-height: 2rem;
+    float: right;
+    margin-right: 2rem;
+}
+@media handheld, only screen and (max-width: 767px) {
+    #top-bar .toggle-view {
+        margin-right: 0.5rem;
+    }
+}
+
+#top-bar .toggle-view a {
+    border: 2px solid grey;
+    padding: 2px;
+}
+@media handheld, only screen and (max-width: 767px) {
+    #top-bar .toggle-view a {
+        display: none;
+    }
+    #top-bar .toggle-view:after {
+        content: '\00a0';
+        line-height: 2rem;
+        width: 1rem;
+        padding: 0 0.5rem;
+        height: 1rem;
+        border: 2px solid grey;
+    
+        cursor: pointer;
+}
+    #top-bar .toggle-view.white:after {
+        background-color: white;
+    }
+    #top-bar .toggle-view.black:after {
+        background-color: black;
+    }
 }
 
 
@@ -33,24 +69,25 @@
 
 #top-bar .user-login .balance-bits {
     display: inline-block;
-
     padding-right: 0.5rem;
 }
 
 #top-bar .user-login .balance-bits span{
     line-height: 2rem;
-
 }
 
 #top-bar .user-login .username {
     display: inline-block;
-
     padding-right: 2rem;
+}
+@media handheld, only screen and (max-width: 767px) {
+    #top-bar .user-login .username {
+        padding-right: 0.5rem;
+    }
 }
 
 #top-bar .user-login .username a {
     line-height: 2rem;
-
     font-weight: bold;
 }
 
