--- a/client_new/css/controls.css
+++ b/client_new/css/controls.css
@@ -78,6 +78,7 @@
     /* padding: 0.1em 0.1em; */
     font-size: 1rem;
     border: 1px solid #ccc;
+    background-color: rgb(240, 238, 238);
 }
 @media handheld, only screen and (max-width: 767px) {
     #controls-inner-container .bet-input-group>input, #controls-inner-container .bet-input-group>span {
@@ -98,7 +99,7 @@
     #controls-inner-container .bet-input-group>span:first-child  {
         color: #555;
         text-align: center;
-        background-color: #eee;
+        background-color: #eee !important;
         border: 1px solid #ccc;
         border-radius: 2px;
         font-size: 0.8em;
