--- a/client_new/css/gamesLog.css
+++ b/client_new/css/gamesLog.css
@@ -1,19 +1,46 @@
-/* Games Log */
-
-.games-log{ /* table */
+#games-log-container {
     height: 100%;
+
     width: 100%;
-    /*text-align: center;*/
-    /* border: 1px solid rgba(94, 94, 94, 0.2); */
+    padding-top: 1rem;
 }
 
-.games-log th {
+#games-log-container .header-bg {
+
+}
+
+#games-log-container .table-inner {
+    height: 100%;
+
+    width: 100%;
+    overflow-y: scroll;
+}
+
+/* table */
+#games-log-container .games-log{
+    height: 100%;
+    max-height: 100%;
+    width: 100%;
+}
+
+#games-log-container .games-log th {
     font-weight: 400;
     font-size: 0.8rem;
     text-align: left;
 }
 
-.games-log tr {
+#games-log-container table .th-inner {
+    position: absolute;
+    top: 0;
+    line-height: 1rem;
+    text-align: left;
+    color: #b0b3c1;
+    font-weight: 600;
+    text-transform: uppercase;
+    font-size: 0.7rem;
+}
+
+#games-log-container .games-log tr {
     width: 100%;
     display: table;
     text-align: left;
@@ -21,141 +48,141 @@
 
 /* Adjust head columns */
 
-.games-log th:nth-child(1) {
+#games-log-container .games-log th:nth-child(1) {
     width: 15%;
     padding-left: 0.2rem;
 }
 
-.games-log th:nth-child(2) {
+#games-log-container .games-log th:nth-child(2) {
     width: 15%;
 }
 
-.games-log th:nth-child(3) {
+#games-log-container .games-log th:nth-child(3) {
     width: 20%;
 }
 
-.games-log th:nth-child(4) {
+#games-log-container .games-log th:nth-child(4) {
     width: 15%;
 }
 
-.games-log th:nth-child(5) {
+#games-log-container .games-log th:nth-child(5) {
     width: 20%;
 }
 
-.games-log th:nth-child(6) {
+#games-log-container .games-log th:nth-child(6) {
     width: 15%;
 }
 
 /* Adjust body columns */
 
-.games-log td:nth-child(1) {
+#games-log-container .games-log td:nth-child(1) {
     width: 15%;
     padding-left: 0.2rem;
 }
 
-.games-log td:nth-child(2) {
+#games-log-container .games-log td:nth-child(2) {
     width: 15%;
 }
 
-.games-log td:nth-child(3) {
+#games-log-container .games-log td:nth-child(3) {
     width: 20%;
 }
 
-.games-log td:nth-child(4) {
+#games-log-container .games-log td:nth-child(4) {
     width: 15%;
 }
 
-.games-log td:nth-child(5) {
+#games-log-container .games-log td:nth-child(5) {
     width: 20%;
 }
 
-.games-log td:nth-child(6) {
+#games-log-container .games-log td:nth-child(6) {
     width: 15%;
 }
 
-.games-log td:nth-child(6)>input {
+#games-log-container .games-log td:nth-child(6)>input {
     width: 60%;
 }
 
-.games-log td:nth-child(6)>input {
+#games-log-container .games-log td:nth-child(6)>input {
     max-width: 40%;
 }
 
-.games-log td:nth-child(6) .hash-copy {
+#games-log-container .games-log td:nth-child(6) .hash-copy {
     width: auto;
 }
 
-.games-log thead, .games-log tbody {
-    float: left;
-    width: 100%;
+#games-log-container .games-log thead, #games-log-container .games-log tbody {
 }
 
-.games-log thead {
+#games-log-container .games-log thead {
     border-bottom: 1px solid rgba(94, 94, 94, 0.2);
 }
 
-.games-log tbody {
+#games-log-container .games-log tbody {
     overflow-y: auto;
     height: 100%;
+    /* position: absolute; */
+    /* top: 1rem; */
+    /* right: 0; */
+    /* left: 0; */
+    bottom: 4rem;
 }
 
-.games-log tr:nth-of-type(even) {
+#games-log-container .games-log tr:nth-of-type(even) {
     background: #1a1c21;
 }
 
 
 
-.games-log tr td {
+#games-log-container .games-log tr td {
     font-size: 0.8rem;
     text-align: left;
 }
 
-.games-log tbody tr:hover {
+#games-log-container .games-log tbody tr:hover {
     color: black;
     background: rgba(255, 129, 0 , .4);
 }
 
-.games-log a {
+#games-log-container .games-log a {
     font-weight: bold;
 }
 
-.games-log-goodcrash  {
+#games-log-container .games-log-goodcrash  {
     color: green;
 }
 
-.games-log-badcrash  {
+#games-log-container .games-log-badcrash  {
     color: red;
 }
 
-.games-log-hash {
+#games-log-container .games-log-hash {
     background-color: transparent;
     border: 0;
     color: white;
 }
 
-.games-log tbody tr:hover .games-log-hash {
+#games-log-container .games-log tbody tr:hover .games-log-hash {
     color: black;
 }
 
-.game-details {
+#games-log-container .game-details {
     font-size: 11px;
     color: #408609;
     letter-spacing: 0.03em;
     font-weight: 200;
 }
 
-.scroll {
-    overflow-y: scroll;
-}
 
-.hash-copy-cont{
+#games-log-container .hash-copy-cont{
     display: inline-block;
     cursor: pointer;
     /* border-bottom-color: rgb(213, 43, 43); */
     /* background-color: aqua; */
 }
 
-.hash-copy {
+#games-log-container .hash-copy {
     -webkit-border-radius: 0 4px 4px 0;
     -moz-border-radius: 0 4px 4px 0;
     border-radius: 0 4px 4px 0;
@@ -178,7 +205,7 @@
 }
 
 @media handheld, only screen and (max-width: 767px) {
-.hash-copy {
+#games-log-container .hash-copy {
     width: 5em;
 }
 }
