--- a/client_new/css/general.css
+++ b/client_new/css/general.css
@@ -1,13 +1,3 @@
-/*@font-face {*/
-    /*font-family: tale;*/
-    /*src: url(fonts/tale.otf);*/
-/*}*/
-
-/*@font-face {*/
-    /*font-family: rbn;*/
-    /*src: url(fonts/RBN.otf);*/
-/*}*/
-
 html, body {
     -webkit-font-smoothing: antialiased;
     font: 14px "Verlag A", "Verlag B", "Helvetica Neue", Helvetica, Arial, sans-serif;
@@ -50,20 +40,20 @@ i {
 }
 
 ::-webkit-scrollbar-corner {
-    background-color: #1c1c1f;
+     background-color: #1c1c1f;
 }
 ::-webkit-scrollbar-track {
-    background-color: #181a1e;
+     background-color: #181a1e;
 }
 ::-webkit-scrollbar-thumb {
-    border: 1px solid #1c1c1f;
+     border: 1px solid #1c1c1f;
     -webkit-border-radius: 10px;
     border-radius: 10px;
-    background-color: #2a2c36;
+     background-color: #2a2c36;
 }
 ::-webkit-scrollbar {
     width: 10px;
-    background-color: #1c1c1f;
+     background-color: #1c1c1f;
 }
 
 .strong {
@@ -98,6 +88,16 @@ i {
     right: 0;
     left: 0;
 }
+
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 @media handheld, only screen and (max-width: 767px) {
     .page-content {
         top: 0;
