--- a/client_new/css/tabs.css
+++ b/client_new/css/tabs.css
@@ -76,8 +76,7 @@
 
 }
 
-#tabs-inner-container .tab-container li.chat-log-tab a{
-    display: table-cell;   
+#tabs-inner-container .tab-container li.chat-log-tab a{   
     vertical-align: middle;   
     line-height: 1.5rem;   
     height: 1.5rem;
@@ -91,6 +90,7 @@
     transform-origin: 50% 50%;
     position: absolute;
     top: 50%;
+    font-weight: 800;
 }
 
 #tabs-inner-container .tab-container li.chat-log-tab {
@@ -132,4 +132,5 @@
     left: 1.5rem;
     bottom: 0;
     background-color: #181a1e;
+    /* overflow-y: scroll; */
 }
