--- a/views/template/head.html
+++ b/views/template/head.html
@@ -6,8 +6,8 @@
     <meta name="format-detection" content="telephone=no" />
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width, height=device-height"/>
     {{?it.table}}
-        <link rel="stylesheet" href="/css/{{? it.buildConfig }}{{=it.buildConfig.gameCssHash}}.css{{??}}game.css{{?}}" />
+        <link rel="stylesheet" href="/css/{{? it.buildConfig }}{{=it.buildConfig['game-old.css']}}{{??}}game.css{{?}}" />
     {{??}}
-        <link rel="stylesheet" href="/css/{{? it.buildConfig }}{{=it.buildConfig.cssHash}}.css{{??}}app.css{{?}}" />
+        <link rel="stylesheet" href="/css/{{? it.buildConfig }}{{=it.buildConfig['app-old.css']}}{{??}}app.css{{?}}" />
     {{?}}
 </head>
