Fix go black theme not building in build process and hash it

--- a/views/template/head_new.html
+++ b/views/template/head_new.html
@@ -10,4 +10,5 @@
     {{??}}
         <link rel="stylesheet" href="/css/{{? it.buildConfig }}{{=it.buildConfig['app-new.css']}}.css{{??}}app.css{{?}}" />
     {{?}}
+    <link rel="stylesheet" id="css-theme-white" href="/css/{{? it.buildConfig }}{{=it.buildConfig['game-theme-new.css']}}{{??}}whiteTheme.css{{?}}" />
 </head>
