Add settings store, add new theme button and color graph depends on the theme selected

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -17,5 +17,11 @@
                 {{?}}
             </div>
 
+            {{?it.page!=='index'}}
+            <div class="new-theme">
+                <a href="/play-new" class="noselect">New Theme!</a>
+            </div>
+            {{?}}
+
         </nav>
     </header>
