--- a/views/template/main-game.html
+++ b/views/template/main-game.html
@@ -11,7 +11,7 @@
 <script>
     var DEV_OTT = {{? it.devOtt}} "{{=it.devOtt}}" {{??}} null {{?}};
     var LOGGED = {{?it.user}} true {{??}} false {{?}};
-    var THEME_FILE_NAME = "{{? it.buildConfig }}{{=it.buildConfig['game-theme-new.css']}}{{??}}game.css{{?}}";
+    var THEME_FILE_NAME = "{{? it.buildConfig }}{{=it.buildConfig['game-theme-new.css']}}{{??}}whiteTheme.css{{?}}";
 
     var USER_MESSAGE = {};
     {{?it.user }}
