--- a/client/css/app.css
+++ b/client/css/app.css
@@ -91,6 +91,15 @@ table {
     white-space: nowrap;
 }
 
+.noselect {
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    user-select: none;
+}
+
 .border-button:hover {
     color:#261e1e;
     text-shadow: 0px 2px 2px rgba(236, 105, 19, 0.40);
