--- a/client_new/css/header.css
+++ b/client_new/css/header.css
@@ -62,6 +62,21 @@
     font-size: 0.8125rem;
 }
 
+
+.new-theme {
+
+}
+
+.new-theme a {
+    border: 2px solid grey;
+
+    padding: 2px;
+    color: #e58929;
+    font-weight: bold;
+    cursor: pointer;
+}
+
+
 /* Small screens */
 @media only screen and (max-width: 40em) {
     .table-title {
