Show beta theme on play only

--- a/views/template/header.html
+++ b/views/template/header.html
@@ -17,9 +17,9 @@
                 {{?}}
             </div>
 
-            {{?it.page!=='index'}}
+            {{?it.table}}
             <div class="new-theme">
-                <a href="/play-new" class="noselect">New Theme!</a>
+                <a href="/play-new" class="noselect">Try our BETA!</a>
             </div>
             {{?}}
 
