Refactor graph, add time to next game, fix max win color, some improvements on controls, load nyan animation only when showing it, fix error colors on inputs

--- a/client_new/css/chart.css
+++ b/client_new/css/chart.css
@@ -30,3 +30,11 @@
     width: auto;
     height: auto;
 }
+
+#chart-inner-container .max-profit {
+    position: absolute;
+    bottom: 27px;
+    right: 30px;
+    font-size: 0.6rem;
+    color: white;
+}
