Autobet color on white theme

--- a/client_new/css/whiteTheme.css
+++ b/client_new/css/whiteTheme.css
@@ -184,6 +184,10 @@ body {
     color: grey;
 }
 
+#strategy-container .auto-bet-container input[type="text"] {
+    color: black;
+}
+
 
 /* ==========================================================================
    players.css
